# Network-Service-Discovery-API-for-C

./: CMakeLists.txt  README.md  main.c  make.txt  network_service_discovery.c  network_service_discovery.h  nsd
apple/: event_loop.c  event_loop.h
nsd.dSYM/Contents/: Info.plist
nsd.dSYM/Contents/Resources/DWARF/: nsd
output/unix/lib/: libnsd.dylib  libnsd_shared.dylib
outputs/debug/lib/: libnsd.dylib
outputs/lib/apple/: libnsd.dylib
src/: main.c  network_service_discovery.c
unix/: event_loop.c  event_loop.h
windows/: event_loop.c  event_loop.h
